--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,16 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.1.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
-  mocktail: ^0.3.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  mocktail: ^0.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
