--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,17 +63,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Rubik
+      fonts:
+        - asset: assets/fonts/rubik/rubik.ttf      
+          
+    - family: ProductSans
+      fonts:
+        - asset: assets/fonts/product-sans/Product-Sans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/product-sans/Product-Sans-Regular.ttf
+          
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
