--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dio: ^5.1.2
   equatable: ^2.0.5
@@ -53,7 +54,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/valorant-logo.png
-   
+    - assets/images/valorant-no-image.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -66,14 +68,12 @@ flutter:
   fonts:
     - family: Rubik
       fonts:
-        - asset: assets/fonts/rubik/rubik.ttf      
-          
+        - asset: assets/fonts/rubik/rubik.ttf
+
     - family: ProductSans
       fonts:
         - asset: assets/fonts/product-sans/Product-Sans-Bold.ttf
           weight: 700
         - asset: assets/fonts/product-sans/Product-Sans-Regular.ttf
-          
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
